20170124: reinicio - un porron de cosas borradas, entre otras, seccion de ayuda y creditos * cambiado el nombre del package

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.vishesh.eight_puzzle"
+        applicationId "edu.fje.clot.puzzle"
     }
 
     buildTypes {
