--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.vishesh.eight_puzzle"
+      package="edu.fje.clot.puzzle"
       android:versionCode="1"
       android:versionName="1.0">
 
 
     <application android:icon="@drawable/smalltiles" android:label="@string/app_name">
-        <activity android:name=".main"
+        <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Game" ></activity>
-        <activity android:name=".Help" ></activity>
-        <activity android:name=".Credits" ></activity>
+        <activity android:name=".GameActivity" ></activity>
+        <service android:name=".MusicService"></service>
        
     </application>
 </manifest>
