--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".GameActivity" ></activity>
-        <service android:name=".audio.MusicService"></service>
-        <service android:name=".image.ImageService"></service>
+        <service android:name=".service.audio.MusicService"></service>
+        <service android:name=".service.image.ImageService"></service>
 
     </application>
 </manifest>
