--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,9 @@
       android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="17"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <application android:icon="@drawable/smalltiles" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -14,9 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity" ></activity>
-        <service android:name=".service.audio.MusicService"></service>
-        <service android:name=".service.image.ImageService"></service>
+        <activity android:name=".GameActivity" />
 
+        <service android:name=".service.audio.MusicService" />
+        <service android:name=".service.image.ImageService" />
     </application>
 </manifest>
