20170224: carrousel ok * carrousel de imagenes funciona bien

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".GameActivity" />
+        <activity android:name=".CarrouselActivity" />
 
         <service android:name=".service.audio.MusicService" />
         <service android:name=".service.image.ImageService" />
